# 8EDR1-74451

./: .gitignore  .pre-commit-config.yaml  README.md  env.sample  manage.py  pyproject.toml  ruff.toml
apps/reserve/: apps.py  exceptions.py  urls.py
apps/reserve/admin/: __init__.py  reserve.py  table.py
apps/reserve/apis/: __init__.py  reserve.py
apps/reserve/migrations/: 0001_initial.py
apps/reserve/models/: __init__.py  reserve.py  table.py
apps/reserve/serializers/: reserve.py
apps/reserve/tests/: test_book.py  test_cancel_book.py
apps/user/: urls.py
apps/user/admin/: user.py
apps/user/migrations/: 0001_initial.py
apps/user/models/: user.py
deployment/: Dockerfile  docker-compose.yml  entrypoint.sh
deployment/nginx/: default.conf
restaurant_reservation_system/: asgi.py  settings.py  urls.py  wsgi.py
